bugfix(project): fixed scrollbar (?)

--- a/blocks/root/normalize.css
+++ b/blocks/root/normalize.css
@@ -77,6 +77,7 @@ body {
 
 .body_active {
     overflow: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
